--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 900;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -39,13 +41,6 @@ h2 {
 .hotels__cards {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
-}
-.hotels__cards--arrow {
-  cursor: pointer;
-  position: absolute;
-  top: 31%;
-  right: -8px;
 }
 .hotels .hotel-card {
   max-width: 296px;
@@ -67,6 +62,16 @@ h2 {
   color: #BFBFBF;
   font-size: 24px;
   line-height: 1.1666666667;
+}
+.hotels .hotel-card--last .hotel-card__img {
+  position: relative;
+}
+.hotels .hotel-card--last .hotel-card__img .hotels__cards--arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  transform: translate(0, -50%);
 }
 
 /*# sourceMappingURL=style.css.map */
