added an arrow svg for hover

--- a/style.css
+++ b/style.css
@@ -42,6 +42,15 @@ h2 {
   display: flex;
   flex-wrap: wrap;
 }
+.hotels__cards--arrow .black {
+  display: none;
+}
+.hotels__cards--arrow:hover .white {
+  display: none;
+}
+.hotels__cards--arrow:hover .black {
+  display: block;
+}
 .hotels .hotel-card {
   max-width: 296px;
 }
