--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 html, body {
   margin: 0;
   padding: 0;
@@ -6,7 +20,7 @@ html, body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 900;
+  font-weight: 500;
   margin: 0;
   padding: 0;
 }
@@ -22,12 +36,54 @@ img {
 h2 {
   color: #383838;
   font-size: 40px;
-  line-height: 1.175;
 }
 
 .container {
   margin: 0 auto;
   max-width: 1250px;
+}
+
+.offers {
+  padding: 120px 0;
+}
+.offers__title {
+  text-align: center;
+  margin-bottom: 110px;
+  position: relative;
+}
+.offers__title:before {
+  position: absolute;
+  content: "";
+  top: 60px;
+  left: 50%;
+  width: 100px;
+  height: 4px;
+  background-color: #F5BD41;
+  transform: translateX(-50%);
+}
+.offers__cards {
+  display: flex;
+  justify-content: center;
+}
+.offers-card {
+  width: 296px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.offers-card:not(:last-child) {
+  margin-right: 15px;
+}
+.offers-card-img {
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+}
+.offers-card-img img {
+  margin: 0 auto;
+}
+.offers-card-text {
+  text-align: center;
 }
 
 .hotels {
