remade the project structure for mixins

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,6 @@
-$background-color-1:            #EAF0F9;
-$text-color:                    #383838;
-$text-color-2:                  #3077C6;
-$text-color-3:                  #BFBFBF;
-$container-max-width:           1250px;
+@import "global";
+@import "components/offers";
+@import "components/hotels";
 
 //@font-face {
 //  font-family: 'Roboto';
@@ -22,148 +20,7 @@ $container-max-width:           1250px;
 //  font-display: swap;
 //}
 
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto;
-  font-weight: 400;
-}
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-}
 
-a {
-  text-decoration: none;
-}
 
-img {
-  display: block;
-}
 
-h2 {
-  color: $text-color;
-  font-size: 40px;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: $container-max-width;
-}
-
-.offers {
-  padding: 120px 0;
-
-  &__title {
-    text-align: center;
-    margin-bottom: 110px;
-    position: relative;
-
-    &:before {
-      position: absolute;
-      content: '';
-      top: 60px;
-      left: 50%;
-      width: 100px;
-      height: 4px;
-      background-color: #F5BD41;
-      transform: translateX(-50%);
-    }
-  }
-
-  &__cards {
-    display: flex;
-    justify-content: center;
-  }
-
-  &-card {
-    width: 296px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &:not(:last-child) {
-      margin-right: 15px;
-    }
-
-    &__img {
-      margin: 0 auto;
-      width: 100px;
-      height: 100px;
-
-      img {
-        margin: 0 auto;
-      }
-    }
-
-    &__text {
-      text-align: center;
-    }
-  }
-}
-
-.hotels {
-  padding: 120px 0;
-  background: $background-color-1;
-
-  &__title {
-    text-align: center;
-    margin-bottom: 105px;
-  }
-
-  &__cards {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-
-    &--arrow {
-      cursor: pointer;
-      position: absolute;
-      top: 128px;
-      right: -8px;
-
-      .black {
-        display: none;
-      }
-
-      &:hover {
-
-        .white {
-          display: none;
-        }
-
-        .black {
-          display: block;
-        }
-      }
-    }
-  }
-
-  .hotel-card {
-    max-width: 296px;
-
-    &:not(:last-child) {
-      padding-right: 1rem;
-    }
-
-    &__img {
-      margin-bottom: 1.5rem;
-    }
-
-    &__name {
-      color: $text-color-2;
-      text-decoration: none;
-      font-size: 24px;
-      line-height: (28/24);
-      margin-bottom: 24px;
-    }
-
-    &__loc {
-      color: $text-color-3;
-      font-size: 24px;
-      line-height: (28/24);
-    }
-  }
-}
