--- a/src/pug/components/pages/index/index.pug
+++ b/src/pug/components/pages/index/index.pug
@@ -1,5 +1,5 @@
-include ../../block/hotels
-include ../../block/offers
+include ../../section/hotels
+include ../../section/offers
 
 +offers({
     title: {
@@ -52,6 +52,90 @@ include ../../block/offers
             img: 'hotel-04.jpg',
             name: 'Hostel Friendship',
             loc: 'Berlin, Germany'
+        }
+    ]
+})
++footer({
+    section: [
+        {
+            links: [
+                {
+                    pageLink: '#',
+                    page: 'About'
+                },
+                {
+                    pageLink: '#',
+                    page: 'How Triphouse works'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Careers'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Privacy'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Terms'
+                }
+            ]
+        },
+        {
+            links: [
+                {
+                    pageLink: '#',
+                    page: 'Property types'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Guest houses'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Hotels'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Apartments'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Villas'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Holiday homes'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Hostels'
+                }
+            ]
+        },
+        {
+            links: [
+                {
+                    pageLink: '#',
+                    page: 'About'
+                },
+                {
+                    pageLink: '#',
+                    page: 'How Triphouse works'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Careers'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Privacy'
+                },
+                {
+                    pageLink: '#',
+                    page: 'Terms'
+                }
+            ]
         }
     ]
 })
