--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,25 +2,20 @@
 @import "components/offers";
 @import "components/hotels";
 
-//@font-face {
-//  font-family: 'Roboto';
-//  src: url('../../fonts/Roboto-Medium.woff2') format('woff2'),
-//  url('../../fonts/Roboto-Medium.woff') format('woff');
-//  font-weight: 500;
-//  font-style: normal;
-//  font-display: swap;
-//}
-//
-//@font-face {
-//  font-family: 'Roboto';
-//  src: url('../../fonts/Roboto-Regular.woff2') format('woff2'),
-//  url('../../fonts/Roboto-Regular.woff') format('woff');
-//  font-weight: normal;
-//  font-style: normal;
-//  font-display: swap;
-//}
+@font-face {
+  font-family: 'Roboto';
+  src: url('../assets/fonts/Roboto-Medium.woff2') format('woff2'),
+  url('../assets/fonts/Roboto-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
 
-
-
-
-
+@font-face {
+  font-family: 'Roboto';
+  src: url('../assets/fonts/Roboto-Regular.woff2') format('woff2'),
+  url('../assets/fonts/Roboto-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
