--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "global";
 @import "components/offers";
 @import "components/hotels";
+@import "components/footer";
 
 @font-face {
   font-family: 'Roboto';
