--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import "global";
 @import "components/header-top";
+@import "components/header-input";
+@import "components/app-down";
 @import "sections/header";
 @import "sections/offers";
 @import "sections/hotels";
