--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -1,6 +1,9 @@
 $background-color-1:            #EAF0F9;
 $brand-white:                   #ffffff;
 $brand-black:                   #000000;
+$brand-1:                       #10367C;
+$brand-2:                       #3077C6;
+$brand-3:                       #F5BD41;
 $text-color:                    #383838;
 $text-color-2:                  #3077C6;
 $text-color-3:                  #BFBFBF;
