--- a/src/pug/components/header-top.pug
+++ b/src/pug/components/header-top.pug
@@ -6,7 +6,7 @@ mixin header-top(data)
     .header__nav
       .header__pages
         each link in data.links
-          a(href=link.pageLink) #{link.page}
+          a(href=link.pageLink class=link.linkClass) #{link.page}
       .header__icons
         each icon in data.icons
           a(href=icon.pageLink)
