--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,6 +13,7 @@ include ../sections/header
       text: 'TripHouse logo',
       links: [
         {
+          linkClass: 'active',
           pageLink: "#",
           page: 'Stays'
         },
@@ -34,8 +35,52 @@ include ../sections/header
         }
       ]
     },
-    title: 'Discover stays\n' +
-            'to live, work or just relax'
+    headerInput: {
+      submitText: 'Search',
+      inputs: [
+        {
+          blockClass: 'dest',
+          labelFor: 'destination',
+          labelText: 'Your destination or hotel name',
+          inputType: 'text',
+          inputId: 'destination',
+          inputName: 'destination',
+          inputValue: 'New York',
+        },
+        {
+          blockClass: 'date',
+          labelFor: 'check-date',
+          labelText: 'Check-in — Check-out',
+          inputType: 'text',
+          inputId: 'check-date',
+          inputName: 'check-date',
+          inputValue: 'Tue 15 Sept — Sat 19 Sept',
+        },
+        {
+          blockClass: 'info',
+          inputType: 'text',
+          inputId: 'check-info',
+          inputName: 'check-info',
+          inputValue: '2 Adults — 0 Children — 1 Room',
+        }
+      ]
+    },
+    appDown: {
+        apps : [
+          {
+            appLink: '#',
+            img: 'google-app.svg',
+            text: 'google-app.svg'
+          },
+          {
+            appLink: '#',
+            img: 'appstore-app.svg',
+            text: 'appstore-app.svg'
+          }
+        ]
+    },
+    title: 'Discover stays',
+    sectitle: 'to live, work or just relax'
   };
   var pageData = {
     keywords: ['trip', 'house'],
@@ -174,8 +219,9 @@ include ../sections/header
     ]
   };
 
-+page(pageData)
-  +header(headerData)
-  +offers(offersData)
-  +hotels(hotelsData)
-  +footer(footerData)
+.altar
+  +page(pageData)
+    +header(headerData)
+    +offers(offersData)
+    +hotels(hotelsData)
+    +footer(footerData)
