--- a/src/styles/components/header-top.scss
+++ b/src/styles/components/header-top.scss
@@ -17,20 +17,29 @@
     margin-right: 48px;
 
     a {
+      position: relative;
       font-size: 24px;
       line-height: (28/24);
       text-align: center;
       color: #FFFFFF;
 
       &.active {
-        border-bottom: 4px solid #F5BD41;
         padding-bottom: 12px;
+
+        &:after {
+          position: absolute;
+          content: "";
+          width: 50px;
+          height: 4px;
+          background-color: #F5BD41;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+        }
       }
 
       &:first-child {
-        padding-bottom: 12px;
         margin-right: 24px;
-        border-bottom: 4px solid #F5BD41;
       }
     }
   }
