--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -7,11 +7,16 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  &__title {
+  &__title,
+  &__title--2 {
     max-width: 542px;
     font-weight: 500;
     font-size: 50px;
     line-height: (59/50);
     color: #FFFFFF;
+  }
+
+  &__title--2 {
+    margin-bottom: 100px;
   }
 }
