Pixel perfect fixes

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -79,8 +79,17 @@ include ../sections/header
           }
         ]
     },
-    title: 'Discover stays',
-    sectitle: 'to live, work or just relax'
+    headerTitle: {
+        titles: [
+          {
+            title: 'Discover stays',
+          },
+          {
+            title: 'to live, work or just relax',
+            class: '--2'
+          }
+        ]
+    },
   };
   var pageData = {
     keywords: ['trip', 'house'],
