--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -6,6 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 120px;
 
   &__title,
   &__title--2 {
@@ -17,6 +18,6 @@
   }
 
   &__title--2 {
-    margin-bottom: 100px;
+    margin-bottom: 145px;
   }
 }
