--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,6 +39,11 @@ input {
   font-weight: 400;
 }
 
+textarea:focus, input:focus{
+  outline: none;
+}
+
+
 .container {
   margin: 0 auto;
   padding: 0 16px;
