--- a/src/styles/sections/offers.scss
+++ b/src/styles/sections/offers.scss
@@ -1,15 +1,15 @@
 .offers {
-  padding: 120px 0;
+  padding: 118px 0;
 
   &__title {
     text-align: center;
-    margin-bottom: 110px;
+    margin-bottom: 103px;
     position: relative;
 
     &:before {
       position: absolute;
       content: '';
-      top: 60px;
+      top: 68px;
       left: 50%;
       width: 100px;
       height: 4px;
@@ -24,17 +24,18 @@
   }
 
   &-card {
-    width: 296px;
+    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     &:not(:last-child) {
-      margin-right: 15px;
+      margin-right: 20px;
     }
 
     &__img {
-      margin: 0 auto;
+      display: flex;
+      margin: 0 auto 50px;
       width: 100px;
       height: 100px;
 
@@ -45,6 +46,8 @@
 
     &__text {
       text-align: center;
+      font-size: 24px;
+      line-height: (28/24);
     }
   }
 }
