offers and footer made a media queries

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -151,6 +151,8 @@ include ../sections/header
     ]
   };
   var footerData = {
+    img: 'logo_footer.svg',
+    text: 'logo_footer',
     copyright: '2020 TripHouse, Inc. All rights reserved',
     sections: [
       {
