--- a/src/styles/sections/offers.scss
+++ b/src/styles/sections/offers.scss
@@ -1,12 +1,16 @@
 .offers {
   padding: 118px 0;
 
+  @media (max-width: $screen-sm-max) {
+    padding: 24px 0 40px;
+  }
+
   &__title {
     text-align: center;
     margin-bottom: 103px;
     position: relative;
 
-    &:before {
+    &:after {
       position: absolute;
       content: '';
       top: 68px;
@@ -16,21 +20,34 @@
       background-color: #F5BD41;
       transform: translateX(-50%);
     }
+
+    @media (max-width: $screen-sm-max) {
+      font-size: 28px;
+      margin-bottom: 32px;
+
+      &:after{
+        display: none;
+      }
+    }
   }
 
   &__cards {
     display: flex;
     justify-content: center;
+
+    @media (max-width: $screen-lg-max) {
+      flex-wrap: wrap;
+    }
   }
 
   &-card {
-    width: 25%;
+    width: 296px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-right: 15px;
     }
 
     &__img {
@@ -48,6 +65,36 @@
       text-align: center;
       font-size: 24px;
       line-height: (28/24);
+    }
+
+    @media (max-width: $screen-lg-max) {
+      width: 50%;
+
+      .altar & {
+        margin-right: 0;
+      }
+
+      &:nth-child(-n+2) {
+        margin-bottom: 32px;
+      }
+
+      &__img {
+        margin-bottom: 16px;
+        width: 70px;
+        height: 70px;
+      }
+    }
+
+    @media (max-width: $screen-sm-max) {
+      width: 100%;
+
+      &:not(:last-child){
+        margin-bottom: 32px;
+      }
+
+      &__img {
+        justify-content: center;
+      }
     }
   }
 }
