--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -8,16 +8,12 @@
   background-size: cover;
   padding-bottom: 120px;
 
-  &__title,
-  &__title--2 {
+  &__title {
+    margin-bottom: 145px;
     max-width: 542px;
     font-weight: 500;
     font-size: 50px;
     line-height: (59/50);
     color: #FFFFFF;
-  }
-
-  &__title--2 {
-    margin-bottom: 145px;
   }
 }
