--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -153,6 +153,7 @@ include ../sections/header
     copyright: '2020 TripHouse, Inc. All rights reserved',
     sections: [
       {
+        col: 'col-sm-3',
         links: [
           {
             pageLink: '#',
@@ -177,6 +178,7 @@ include ../sections/header
         ]
       },
       {
+        col: 'col-sm-6',
         links: [
           {
             pageLink: '#',
@@ -209,6 +211,7 @@ include ../sections/header
         ]
       },
       {
+        col: 'col-sm-3',
         links: [
           {
             pageLink: '#',
