--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -21,3 +21,5 @@ $screen-xl-min:                 1201px;
 
 $container-max-width:           1264px;
 $container-min-width:           $screen-xs-min;
+
+$col-size:                      (100%/12);
