--- a/src/pug/sections/hotels.pug
+++ b/src/pug/sections/hotels.pug
@@ -3,9 +3,9 @@ mixin hotels(data)
   .hotels
     .container
       +title(data.title)
-      .hotels__cards
+      .hotels__cards.row
         each card in data.cards
-          .hotel-card
+          .hotel-card.col-3.col-md-6.col-sm-12
             a(href="#")
               .hotel-card__img
                 img(src=require('../../assets/images/' + card.img).default alt= card.name)
