--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -50,3 +50,215 @@ textarea:focus, input:focus{
   max-width: $container-max-width;
   min-width: $container-min-width;
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -8px;
+}
+
+[class*='col-'] {
+  flex-grow: 0;
+  padding: 0 8px;
+}
+
+.col-1 {
+  width: $col-size;
+}
+
+.col-2 {
+  width: $col-size * 2;
+}
+
+.col-3 {
+  width: $col-size * 3;
+}
+
+.col-4 {
+  width: $col-size * 4;
+}
+
+.col-5 {
+  width: $col-size * 5;
+}
+
+.col-6 {
+  width: $col-size * 6;
+}
+
+.col-7 {
+  width: $col-size * 7;
+}
+
+.col-8 {
+  width: $col-size * 8;
+}
+
+.col-9 {
+  width: $col-size * 9;
+}
+
+.col-10 {
+  width: $col-size * 10;
+}
+
+.col-11 {
+  width: $col-size * 11;
+}
+
+.col-12 {
+  width: $col-size * 12;
+}
+
+@media only screen and (max-width: $screen-md-max) {
+  .col-md-1 {
+    width: $col-size;
+  }
+
+  .col-md-2 {
+    width: $col-size * 2;
+  }
+
+  .col-md-3 {
+    width: $col-size * 3;
+  }
+
+  .col-md-4 {
+    width: $col-size * 4;
+  }
+
+  .col-md-5 {
+    width: $col-size * 5;
+  }
+
+  .col-md-6 {
+    width: $col-size * 6;
+  }
+
+  .col-md-7 {
+    width: $col-size * 7;
+  }
+
+  .col-md-8 {
+    width: $col-size * 8;
+  }
+
+  .col-md-9 {
+    width: $col-size * 9;
+  }
+
+  .col-md-10 {
+    width: $col-size * 10;
+  }
+
+  .col-md-11 {
+    width: $col-size * 11;
+  }
+
+  .col-md-12 {
+    width: $col-size * 12;
+  }
+}
+
+@media only screen and (max-width: $screen-sm-max) {
+  .col-sm-1 {
+    width: $col-size;
+  }
+
+  .col-sm-2 {
+    width: $col-size * 2;
+  }
+
+  .col-sm-3 {
+    width: $col-size * 3;
+  }
+
+  .col-sm-4 {
+    width: $col-size * 4;
+  }
+
+  .col-sm-5 {
+    width: $col-size * 5;
+  }
+
+  .col-sm-6 {
+    width: $col-size * 6;
+  }
+
+  .col-sm-7 {
+    width: $col-size * 7;
+  }
+
+  .col-sm-8 {
+    width: $col-size * 8;
+  }
+
+  .col-sm-9 {
+    width: $col-size * 9;
+  }
+
+  .col-sm-10 {
+    width: $col-size * 10;
+  }
+
+  .col-sm-11 {
+    width: $col-size * 11;
+  }
+
+  .col-sm-12 {
+    width: $col-size * 12;
+  }
+}
+
+@media only screen and (max-width: $screen-sm-max) {
+  .col-xs-1 {
+    width: $col-size;
+  }
+
+  .col-xs-2 {
+    width: $col-size * 2;
+  }
+
+  .col-xs-3 {
+    width: $col-size * 3;
+  }
+
+  .col-xs-4 {
+    width: $col-size * 4;
+  }
+
+  .col-xs-5 {
+    width: $col-size * 5;
+  }
+
+  .col-xs-6 {
+    width: $col-size * 6;
+  }
+
+  .col-xs-7 {
+    width: $col-size * 7;
+  }
+
+  .col-xs-8 {
+    width: $col-size * 8;
+  }
+
+  .col-xs-9 {
+    width: $col-size * 9;
+  }
+
+  .col-xs-10 {
+    width: $col-size * 10;
+  }
+
+  .col-xs-11 {
+    width: $col-size * 11;
+  }
+
+  .col-xs-12 {
+    width: $col-size * 12;
+  }
+}
+
+
+
