--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -39,7 +39,7 @@ include ../sections/header
       submitText: 'Search',
       inputs: [
         {
-          blockClass: 'dest',
+          blockClass: 'dest col-md-12',
           labelFor: 'destination',
           labelText: 'Your destination or hotel name',
           inputType: 'text',
@@ -48,7 +48,7 @@ include ../sections/header
           inputValue: 'New York',
         },
         {
-          blockClass: 'date',
+          blockClass: 'date col-md-6',
           labelFor: 'check-date',
           labelText: 'Check-in — Check-out',
           inputType: 'text',
@@ -57,7 +57,7 @@ include ../sections/header
           inputValue: 'Tue 15 Sept — Sat 19 Sept',
         },
         {
-          blockClass: 'info',
+          blockClass: 'info col-md-6',
           inputType: 'text',
           inputId: 'check-info',
           inputName: 'check-info',
