--- a/src/styles/sections/hotels.scss
+++ b/src/styles/sections/hotels.scss
@@ -13,8 +13,9 @@
     &--arrow {
       cursor: pointer;
       position: absolute;
-      top: 128px;
+      top: 50%;
       right: -8px;
+      transform: translateY(-80px);
 
       .black {
         display: none;
@@ -30,6 +31,10 @@
           display: block;
         }
       }
+
+      @media (max-width: $screen-sm-max) {
+        display: none;
+      }
     }
   }
 
@@ -37,6 +42,11 @@
 
     &__img {
       margin-bottom: 1.5rem;
+
+      img {
+        max-width: 100%;
+        width: 100%;
+      }
     }
 
     &__name {
@@ -51,6 +61,28 @@
       color: $text-color-3;
       font-size: 24px;
       line-height: (28/24);
+    }
+
+
+    @media (max-width: $screen-md-max) {
+
+      &:nth-child(3),
+      &:nth-child(4){
+        display: none;
+      }
+    }
+
+    @media (max-width: $screen-md-max) {
+      margin-bottom: 32px;
+
+      &:nth-child(3),
+      &:nth-child(4){
+        display: block;
+      }
+
+      &:nth-child(4) {
+        margin-bottom: 0;
+      }
     }
   }
 }
