--- a/src/pug/sections/hotels.pug
+++ b/src/pug/sections/hotels.pug
@@ -5,12 +5,11 @@ mixin hotels(data)
       +title(data.title)
       .hotels__cards.row
         each card in data.cards
-          .hotel-card.col-3.col-md-6.col-xs-12
+          .hotel-card.col-3.col-md-6
             a(href="#")
               .hotel-card__img
                 img(src=require('../../assets/images/' + card.img).default alt= card.name)
               .hotel-card__name #{card.name}
             .hotel-card__loc #{card.loc}
-        .hotels__cards--arrow
-          img(class="white" src=require('../../assets/images/' + data.white).default alt= data.white)
-          img(class="black" src=require('../../assets/images/' + data.black).default alt= data.black)
+        //.hotels__cards--arrow
+        //  img(class="white" src=require('../../assets/images/' + data.white).default alt= data.white)
