--- a/src/styles/sections/footer.scss
+++ b/src/styles/sections/footer.scss
@@ -3,7 +3,7 @@
   background-color: #10367C;
 
   @media (max-width: $screen-sm-max) {
-    padding: 40px 67px;
+    padding: 40px 0;
   }
 
   &__row {
