--- a/src/pug/components/header-top.pug
+++ b/src/pug/components/header-top.pug
@@ -9,5 +9,5 @@ mixin header-top(data)
           a(href=link.pageLink class=link.linkClass) #{link.page}
       .header__icons
         each icon in data.icons
-          a(href=icon.pageLink)
+          a(href=icon.pageLink class=icon.iconClass)
             img(src=require('../../assets/images/' + icon.img).default alt= icon.text)
