--- a/src/styles/components/header-input.scss
+++ b/src/styles/components/header-input.scss
@@ -1,58 +1,71 @@
 .header-input {
   margin-bottom: 120px;
 
-  form {
-    background-color: $brand-white;
-    border-radius: 8px;
-
-    @media (max-width: $screen-md-max) {
-      padding: 8px;
-      background-color: $brand-3;
-    }
+  &__mobile {
+    display: none;
   }
 
   &__row {
     display: flex;
+    flex-wrap: wrap;
+  }
+
+  form {
+    background-color: $brand-white;
+    border-radius: 8px;
   }
 
   &__block {
+    width: 100%;
     position: relative;
 
-    @media (max-width: $screen-md-max) {
-      margin-bottom: 16px;
-    }
-
     &--dest {
+      max-width: 467px;
 
-      @media (min-width: $screen-lg-min) {
-        max-width: 467px;
+      input {
+        border-radius: 8px 0 0 8px;
+      }
+
+      @media (max-width: $screen-lg-max) {
+        max-width: 50%;
       }
     }
 
     &--date {
+      background-color: $brand-white;
+      max-width: 259px;
+      border: 3px solid $brand-3;
+      border-radius: 8px;
 
-      @media (min-width: $screen-lg-min) {
-        max-width: 259px;
-        border: 3px solid $brand-3;
+      input {
+        max-width: 100%;
         border-radius: 8px;
 
         .altar & {
           padding: 21px 22px 17px;
         }
       }
+
+      @media (max-width: $screen-lg-max) {
+        max-width: 50%;
+      }
     }
 
     &--info {
+      max-width: 314px;
 
-      @media (min-width: $screen-lg-min) {
-        max-width: 322px;
+      @media (max-width: $screen-lg-max) {
+        max-width: 100%;
       }
     }
 
     &--btn {
-      margin-bottom: 0;
+      flex-grow: 1;
+      width: 192px;
 
       .header-input__submit {
+        padding-top: 19px;
+        padding-bottom: 18px;
         background-color: $brand-2;
         font-weight: 500;
         font-size: 24px;
@@ -62,15 +75,10 @@
         cursor: pointer;
         border-radius: 8px;
         z-index: 10;
-
-        @media (min-width: $screen-lg-min) {
-          width: 192px;
-        }
       }
     }
 
     input {
-      border-radius: 8px;
       max-width: 100%;
       font-size: 18px;
       line-height: (21/18);
@@ -86,6 +94,14 @@
       font-size: 18px;
       line-height: (21/18);
       color: $brand-white;
+    }
+  }
+
+  @media (max-width: $screen-md-max) {
+    display: none;
+
+    &__mobile {
+      display: block;
     }
   }
 }
