--- a/src/styles/components/header-top.scss
+++ b/src/styles/components/header-top.scss
@@ -16,6 +16,10 @@
   &__pages {
     margin-right: 48px;
 
+    @media (max-width: $screen-md-max) {
+      display: none;
+    }
+
     a {
       position: relative;
       font-size: 24px;
@@ -48,9 +52,17 @@
     display: flex;
     align-items: center;
 
+    .icon-menu {
+      display: none;
+
+      @media (max-width: $screen-md-max) {
+        display: block;
+      }
+    }
+
     a {
 
-      &:first-child {
+      &:not(:last-child) {
         margin-right: 24px;
       }
     }
