--- a/src/styles/sections/hotels.scss
+++ b/src/styles/sections/hotels.scss
@@ -1,10 +1,20 @@
 .hotels {
   padding: 123px 0;
   background: $background-color-1;
+  
+  @media (max-width: $screen-sm-max) {
+    padding: 40px 0;
+  }
 
   &__title {
     text-align: center;
     margin-bottom: 105px;
+
+    @media (max-width: $screen-sm-max) {
+      margin-bottom: 2rem;
+      font-size: 28px;
+      line-height: (33/28);
+    }
   }
 
   &__cards {
@@ -32,9 +42,9 @@
         }
       }
 
-      @media (max-width: $screen-sm-max) {
-        display: none;
-      }
+      //@media (max-width: $screen-sm-max) {
+      //  display: none;
+      //}
     }
   }
 
@@ -42,10 +52,21 @@
 
     &__img {
       margin-bottom: 1.5rem;
+      position: relative;
+      width: 100%;
+      padding-top: 100%;
 
       img {
-        max-width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      @media (max-width: $screen-sm-max) {
+        margin-bottom: 0.5rem;
       }
     }
 
@@ -55,12 +76,34 @@
       font-size: 24px;
       line-height: (28/24);
       margin-bottom: 24px;
+
+      @media (max-width: $screen-xs-max) {
+        margin-bottom: 0.25rem;
+        font-size: 12px;
+        line-height: (14/12);
+      }
+
+      @media (max-width: $screen-sm-max) {
+        margin-bottom: 0.25rem;
+        font-size: 15px;
+        line-height: (18/15);
+      }
     }
 
     &__loc {
       color: $text-color-3;
       font-size: 24px;
       line-height: (28/24);
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 15px;
+        line-height: (18/15)
+      }
+
+      @media (max-width: $screen-xs-max) {
+        font-size: 12px;
+        line-height: (14/12);
+      }
     }
 
 
@@ -69,19 +112,6 @@
       &:nth-child(3),
       &:nth-child(4){
         display: none;
-      }
-    }
-
-    @media (max-width: $screen-md-max) {
-      margin-bottom: 32px;
-
-      &:nth-child(3),
-      &:nth-child(4){
-        display: block;
-      }
-
-      &:nth-child(4) {
-        margin-bottom: 0;
       }
     }
   }
